avoid margin collapsing, causing animation glitch

--- a/home/components/dropdownList.module.scss
+++ b/home/components/dropdownList.module.scss
@@ -18,6 +18,7 @@
 .dropdownListWrapper {
   display: flex;
   align-items: flex-start;
+  padding: 0.05px; // to avoid margin collapsing
   margin-bottom: 2em;
 }
 
